--- a/index.html
+++ b/index.html
@@ -1,16 +1,136 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio</title>
+  <title>Portfolio | Thân Thị Thảo Hương</title>
+
+  <style>
+    body {
+      margin: 0;
+      background: #f2f4f7;
+      font-family: "Segoe UI", Arial, sans-serif;
+      color: #1f2d3d;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 80px auto;
+      padding: 0 20px;
+    }
+
+    .card {
+      background: white;
+      border-radius: 14px;
+      padding: 50px 60px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.08);
+
+      opacity: 0;
+      transform: translateY(40px);
+      animation: slideFade 1.2s ease forwards;
+    }
+
+    @keyframes slideFade {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #e5e7eb;
+      padding-bottom: 25px;
+      margin-bottom: 30px;
+    }
+
+    .name {
+      font-size: 34px;
+      font-weight: 600;
+      margin: 0;
+    }
+
+    .title {
+      font-size: 18px;
+      color: #3b82f6;
+      margin-top: 6px;
+    }
+
+    .tag {
+      background: #1f2937;
+      color: white;
+      padding: 8px 16px;
+      border-radius: 20px;
+      font-size: 14px;
+    }
+
+    .section {
+      margin-bottom: 28px;
+    }
+
+    .section h3 {
+      margin-bottom: 12px;
+      font-size: 20px;
+      color: #111827;
+    }
+
+    .info p,
+    .about p {
+      margin: 6px 0;
+      font-size: 16px;
+      line-height: 1.7;
+      color: #374151;
+    }
+
+    .skills span {
+      display: inline-block;
+      margin: 6px 10px 0 0;
+      padding: 8px 14px;
+      background: #e5e7eb;
+      border-radius: 20px;
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Thân Thị Thảo Hương</h1>
+  <div class="container">
+    <div class="card">
+      <div class="header">
+        <div>
+          <h1 class="name">Thân Thị Thảo Hương</h1>
+          <div class="title">Business Chinese Student</div>
+        </div>
+        <div class="tag">Personal Portfolio</div>
+      </div>
 
-  <p>Mã sinh viên: 2311720019</p>
-  <p>Trường: Foreign Trade University</p>
-  <p>Ngành: Business Chinese</p>
+      <div class="section info">
+        <h3>Personal Information</h3>
+        <p><b>Student ID:</b> 2311720019</p>
+        <p><b>University:</b> Foreign Trade University (FTU)</p>
+        <p><b>Major:</b> Business Chinese</p>
+      </div>
 
-  <p>Sinh viên chuyên ngành Tiếng Trung Thương mại.</p>
+      <div class="section about">
+        <h3>Profile</h3>
+        <p>
+          I am a Business Chinese undergraduate student with a strong interest
+          in international business communication, translation, and
+          cross-cultural cooperation. I aim to develop a professional career
+          in an international working environment.
+        </p>
+      </div>
+
+      <div class="section skills">
+        <h3>Languages & Skills</h3>
+        <span>Vietnamese – Native</span>
+        <span>Chinese – Intermediate</span>
+        <span>English – Intermediate</span>
+        <span>Business Communication</span>
+        <span>Translation Basics</span>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
