--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     }
 
     .container {
-      max-width: 900px;
+      max-width: 960px;
       margin: 80px auto;
       padding: 0 20px;
     }
 
     .card {
       background: white;
-      border-radius: 14px;
-      padding: 50px 60px;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.08);
+      border-radius: 16px;
+      padding: 55px 65px;
+      box-shadow: 0 25px 60px rgba(0,0,0,0.08);
 
       opacity: 0;
       transform: translateY(40px);
@@ -41,54 +41,53 @@
       justify-content: space-between;
       align-items: center;
       border-bottom: 1px solid #e5e7eb;
-      padding-bottom: 25px;
-      margin-bottom: 30px;
+      padding-bottom: 28px;
+      margin-bottom: 35px;
     }
 
     .name {
-      font-size: 34px;
+      font-size: 36px;
       font-weight: 600;
       margin: 0;
     }
 
     .title {
       font-size: 18px;
-      color: #3b82f6;
+      color: #2563eb;
       margin-top: 6px;
     }
 
     .tag {
-      background: #1f2937;
+      background: #111827;
       color: white;
-      padding: 8px 16px;
-      border-radius: 20px;
+      padding: 9px 18px;
+      border-radius: 22px;
       font-size: 14px;
     }
 
     .section {
-      margin-bottom: 28px;
+      margin-bottom: 34px;
     }
 
     .section h3 {
-      margin-bottom: 12px;
-      font-size: 20px;
+      margin-bottom: 14px;
+      font-size: 21px;
       color: #111827;
     }
 
-    .info p,
-    .about p {
+    .section p {
       margin: 6px 0;
       font-size: 16px;
-      line-height: 1.7;
+      line-height: 1.75;
       color: #374151;
     }
 
     .skills span {
       display: inline-block;
-      margin: 6px 10px 0 0;
-      padding: 8px 14px;
+      margin: 8px 10px 0 0;
+      padding: 9px 16px;
       background: #e5e7eb;
-      border-radius: 20px;
+      border-radius: 22px;
       font-size: 14px;
     }
   </style>
@@ -97,39 +96,74 @@
 <body>
   <div class="container">
     <div class="card">
+
       <div class="header">
         <div>
           <h1 class="name">Thân Thị Thảo Hương</h1>
-          <div class="title">Business Chinese Student</div>
+          <div class="title">Third-Year Business Chinese Student</div>
         </div>
-        <div class="tag">Personal Portfolio</div>
+        <div class="tag">Professional Portfolio</div>
       </div>
 
-      <div class="section info">
+      <div class="section">
         <h3>Personal Information</h3>
         <p><b>Student ID:</b> 2311720019</p>
         <p><b>University:</b> Foreign Trade University (FTU)</p>
         <p><b>Major:</b> Business Chinese</p>
+        <p><b>Academic Year:</b> Third-year undergraduate student</p>
       </div>
 
-      <div class="section about">
-        <h3>Profile</h3>
+      <div class="section">
+        <h3>Professional Profile</h3>
         <p>
-          I am a Business Chinese undergraduate student with a strong interest
-          in international business communication, translation, and
-          cross-cultural cooperation. I aim to develop a professional career
-          in an international working environment.
+          I am a third-year Business Chinese student at Foreign Trade University
+          with a solid foundation in Chinese language and business-related subjects.
+          Through my academic training, I have developed strong skills in
+          business communication, document analysis, and basic translation
+          between Chinese and Vietnamese.
+        </p>
+        <p>
+          I am particularly interested in international trade, cross-border
+          business communication, and working in multicultural environments.
+          My academic background has helped me build a professional mindset,
+          attention to detail, and the ability to adapt quickly to new tasks.
+        </p>
+      </div>
+
+      <div class="section">
+        <h3>Academic & Practical Experience</h3>
+        <p>
+          During my studies, I have completed multiple coursework projects related
+          to business Chinese, including analysis of commercial texts, translation
+          exercises, and case studies on international trade practices.
+        </p>
+        <p>
+          In addition, I have experience working with Chinese-language materials
+          such as contracts, emails, and business reports, which has strengthened
+          my understanding of professional terminology and formal writing styles.
         </p>
       </div>
 
       <div class="section skills">
         <h3>Languages & Skills</h3>
         <span>Vietnamese – Native</span>
-        <span>Chinese – Intermediate</span>
+        <span>Chinese – Upper-Intermediate</span>
         <span>English – Intermediate</span>
         <span>Business Communication</span>
-        <span>Translation Basics</span>
+        <span>Chinese–Vietnamese Translation</span>
+        <span>Office Software (Word, PowerPoint)</span>
       </div>
+
+      <div class="section">
+        <h3>Career Objective</h3>
+        <p>
+          I am seeking opportunities to further develop my professional skills
+          through internships or entry-level positions related to international
+          business, Chinese communication, or translation, where I can apply
+          my academic knowledge in a real working environment.
+        </p>
+      </div>
+
     </div>
   </div>
 </body>
