--- a/index.html
+++ b/index.html
@@ -2,166 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Thân Thị Thảo Hương</title>
+  <title>My Portfolio</title>
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
-      background: linear-gradient(120deg, #eef2f7, #f8fafc);
-      font-family: "Segoe UI", Arial, sans-serif;
-      color: #1f2d3d;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(120deg, #f4f6f9, #e9eef5);
+      color: #333;
     }
 
     .container {
-      max-width: 1000px;
-      margin: 70px auto;
-      padding: 0 20px;
-    }
-
-    .card {
-      background: white;
-      border-radius: 18px;
-      padding: 55px 70px;
-      box-shadow: 0 30px 70px rgba(0,0,0,0.1);
-
-      opacity: 0;
-      transform: translateY(40px);
-      animation: slideFade 1.2s ease forwards;
-    }
-
-    @keyframes slideFade {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .header {
-      display: flex;
-      align-items: center;
-      gap: 35px;
-      border-bottom: 1px solid #e5e7eb;
-      padding-bottom: 30px;
-      margin-bottom: 35px;
-    }
-
-    .avatar {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid #2563eb;
-    }
-
-    .name {
-      font-size: 36px;
-      margin: 0;
-      font-weight: 600;
-    }
-
-    .title {
-      font-size: 18px;
-      color: #2563eb;
-      margin-top: 6px;
-    }
-
-    .section {
-      margin-bottom: 34px;
-    }
-
-    .section h3 {
-      font-size: 22px;
-      margin-bottom: 14px;
-      color: #0f172a;
-    }
-
-    .section p {
-      font-size: 16px;
-      line-height: 1.75;
-      color: #334155;
-      margin: 6px 0;
-    }
-
-    .skills span {
-      display: inline-block;
-      margin: 8px 10px 0 0;
-      padding: 10px 18px;
-      background: #e5e7eb;
-      border-radius: 22px;
-      font-size: 14px;
-      transition: all 0.3s ease;
-    }
-
-    .skills span:hover {
-      background: #2563eb;
-      color: white;
-      transform: translateY(-3px);
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container">
-    <div class="card">
-
-      <div class="header">
-        <img src="avatar.jpg" alt="Avatar" class="avatar">
-        <div>
-          <h1 class="name">Thân Thị Thảo Hương</h1>
-          <div class="title">Third-Year Business Chinese Student</div>
-        </div>
-      </div>
-
-      <div class="section">
-        <h3>Personal Information</h3>
-        <p><b>Student ID:</b> 2311720019</p>
-        <p><b>University:</b> Foreign Trade University (FTU)</p>
-        <p><b>Major:</b> Business Chinese</p>
-      </div>
-
-      <div class="section">
-        <h3>Professional Profile</h3>
-        <p>
-          I am a third-year Business Chinese student with a strong academic
-          background in Chinese language and international business.
-          I am highly motivated to apply my knowledge in real-world
-          professional environments.
-        </p>
-        <p>
-          My interests include business communication, translation,
-          and cross-cultural cooperation in international trade contexts.
-        </p>
-      </div>
-
-      <div class="section">
-        <h3>Academic & Practical Experience</h3>
-        <p>
-          Experienced in analyzing Chinese business documents, translating
-          commercial materials, and working with professional terminology
-          through coursework and academic projects.
-        </p>
-      </div>
-
-      <div class="section skills">
-        <h3>Languages & Skills</h3>
-        <span>Vietnamese – Native</span>
-        <span>Chinese – Upper-Intermediate</span>
-        <span>English – Intermediate</span>
-        <span>Business Communication</span>
-        <span>Chinese–Vietnamese Translation</span>
-        <span>Office Software</span>
-      </div>
-
-      <div class="section">
-        <h3>Career Objective</h3>
-        <p>
-          Seeking internship or entry-level opportunities related to
-          international business, Chinese communication, or translation,
-          where I can further develop my professional skills.
-        </p>
-      </div>
-
-    </div>
-  </div>
-</body>
-</html>
+      max-width: 900px;
+      margin: 60px auto;
+      background: #fff;
+      border-radius: 16px;
+      padding: 50px;
+      box-shadow: 0 20px 40px rg
