--- a/index.html
+++ b/index.html
@@ -21,4 +21,130 @@
       background: #fff;
       border-radius: 16px;
       padding: 50px;
-      box-shadow: 0 20px 40px rg
+      box-shadow: 0 20px 40px rgba(0,0,0,0.08);
+      animation: fadeIn 1.2s ease;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+    }
+
+    .header img {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid #e6ecf2;
+      transition: transform 0.4s ease;
+    }
+
+    .header img:hover {
+      transform: scale(1.08);
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 32px;
+    }
+
+    .title {
+      color: #666;
+      margin-top: 6px;
+      font-size: 16px;
+    }
+
+    section {
+      margin-top: 40px;
+    }
+
+    h2 {
+      border-left: 5px solid #4f7cff;
+      padding-left: 12px;
+      font-size: 22px;
+    }
+
+    p, li {
+      line-height: 1.7;
+      font-size: 16px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 50px;
+      color: #888;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <div class="header">
+      <img src="avatar.jpg" alt="My Avatar">
+      <div>
+        <h1>Huong Tran</h1>
+        <div class="title">Third-year University Student</div>
+      </div>
+    </div>
+
+    <section>
+      <h2>About Me</h2>
+      <p>
+        I am a third-year university student with a strong interest in technology, data processing,
+        and practical problem-solving. I am highly motivated, responsible, and eager to learn new skills.
+      </p>
+    </section>
+
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li>Basic Python programming</li>
+        <li>Data handling with Pandas</li>
+        <li>HTML & CSS fundamentals</li>
+        <li>Microsoft Office (Word, Excel, PowerPoint)</li>
+        <li>Basic academic research skills</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Experience</h2>
+      <p>
+        • Academic projects and assignments involving data analysis and reporting<br>
+        • Experience working in groups and presenting results<br>
+        • Familiar with GitHub for version control and documentation
+      </p>
+    </section>
+
+    <section>
+      <h2>Career Objective</h2>
+      <p>
+        I am seeking opportunities to gain practical experience, improve my professional skills,
+        and gradually develop into a competent specialist in my field.
+      </p>
+    </section>
+
+    <div class="footer">
+      © 2026 · Personal Portfolio
+    </div>
+
+  </div>
+</body>
+</html>
