--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Portfolio</title>
+  <title>Portfolio | Than Thi Thao Huong</title>
 
-  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(120deg, #f4f6f9, #e9eef5);
+      background: linear-gradient(120deg, #eef2f7, #e3e9f1);
       color: #333;
     }
 
     .container {
       max-width: 900px;
       margin: 60px auto;
-      background: #fff;
-      border-radius: 16px;
+      background: #ffffff;
       padding: 50px;
+      border-radius: 18px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.08);
       animation: fadeIn 1.2s ease;
     }
@@ -40,14 +39,15 @@
       display: flex;
       align-items: center;
       gap: 30px;
+      margin-bottom: 40px;
     }
 
     .header img {
-      width: 140px;
-      height: 140px;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #e6ecf2;
+      border: 4px solid #e2e8f0;
       transition: transform 0.4s ease;
     }
 
@@ -57,12 +57,13 @@
 
     h1 {
       margin: 0;
-      font-size: 32px;
+      font-size: 34px;
+      color: #1f2d3d;
     }
 
-    .title {
-      color: #666;
-      margin-top: 6px;
+    .subtitle {
+      margin-top: 8px;
+      color: #5f6f81;
       font-size: 16px;
     }
 
@@ -71,14 +72,16 @@
     }
 
     h2 {
+      font-size: 22px;
+      margin-bottom: 12px;
       border-left: 5px solid #4f7cff;
       padding-left: 12px;
-      font-size: 22px;
+      color: #1f2d3d;
     }
 
     p, li {
-      line-height: 1.7;
       font-size: 16px;
+      line-height: 1.7;
     }
 
     ul {
@@ -86,58 +89,66 @@
     }
 
     .footer {
+      margin-top: 60px;
       text-align: center;
-      margin-top: 50px;
-      color: #888;
       font-size: 14px;
+      color: #8898aa;
     }
   </style>
 </head>
 
 <body>
+
   <div class="container">
 
     <div class="header">
-      <img src="avatar.jpg" alt="My Avatar">
+      <img src="avatar.jpg" alt="Profile Photo">
       <div>
-        <h1>Huong Tran</h1>
-        <div class="title">Third-year University Student</div>
+        <h1>Than Thi Thao Huong</h1>
+        <div class="subtitle">
+          Third-year Student · Foreign Trade University<br>
+          Major: Business Chinese
+        </div>
       </div>
     </div>
 
     <section>
       <h2>About Me</h2>
       <p>
-        I am a third-year university student with a strong interest in technology, data processing,
-        and practical problem-solving. I am highly motivated, responsible, and eager to learn new skills.
+        I am a third-year university student majoring in Business Chinese at Foreign Trade University.
+        I am highly motivated, detail-oriented, and eager to apply academic knowledge to real-world
+        business and technology-related environments.
       </p>
     </section>
 
     <section>
       <h2>Skills</h2>
       <ul>
-        <li>Basic Python programming</li>
-        <li>Data handling with Pandas</li>
+        <li>Business Chinese communication (reading, writing, basic interpretation)</li>
+        <li>Basic programming with Python</li>
+        <li>Data processing and analysis with Pandas</li>
         <li>HTML & CSS fundamentals</li>
         <li>Microsoft Office (Word, Excel, PowerPoint)</li>
-        <li>Basic academic research skills</li>
+        <li>Teamwork, presentation, and academic research skills</li>
       </ul>
     </section>
 
     <section>
       <h2>Experience</h2>
       <p>
-        • Academic projects and assignments involving data analysis and reporting<br>
-        • Experience working in groups and presenting results<br>
-        • Familiar with GitHub for version control and documentation
+        • Completed multiple academic projects involving data handling and reporting<br>
+        • Experienced in group collaboration and oral presentations<br>
+        • Familiar with GitHub for version control and documentation<br>
+        • Able to work responsibly under deadlines and adapt quickly to new tools
       </p>
     </section>
 
     <section>
       <h2>Career Objective</h2>
       <p>
-        I am seeking opportunities to gain practical experience, improve my professional skills,
-        and gradually develop into a competent specialist in my field.
+        I aim to gain practical experience through internships or entry-level positions, continuously
+        improve my professional skills, and gradually develop into a competent specialist in business,
+        language, and technology-related fields.
       </p>
     </section>
 
@@ -146,5 +157,6 @@
     </div>
 
   </div>
+
 </body>
 </html>
