--- a/index.html
+++ b/index.html
@@ -48,11 +48,6 @@
       border-radius: 50%;
       object-fit: cover;
       border: 4px solid #e2e8f0;
-      transition: transform 0.4s ease;
-    }
-
-    .header img:hover {
-      transform: scale(1.08);
     }
 
     h1 {
@@ -65,6 +60,7 @@
       margin-top: 8px;
       color: #5f6f81;
       font-size: 16px;
+      line-height: 1.5;
     }
 
     section {
@@ -113,42 +109,85 @@
     </div>
 
     <section>
-      <h2>About Me</h2>
+      <h2>Profile</h2>
       <p>
-        I am a third-year university student majoring in Business Chinese at Foreign Trade University.
-        I am highly motivated, detail-oriented, and eager to apply academic knowledge to real-world
-        business and technology-related environments.
+        I am a third-year student majoring in Business Chinese with a solid language foundation and
+        strong academic background. I am highly motivated, responsible, and adaptable, with experience
+        in translation, teaching assistance, and cross-cultural communication.
+      </p>
+    </section>
+
+    <section>
+      <h2>Education</h2>
+      <p>
+        <strong>Foreign Trade University</strong><br>
+        Major: Business Chinese (2023 – Present)
+      </p>
+      <p>
+        <strong>Bac Giang Specialized High School</strong><br>
+        Chinese Language Specialized Program (2020 – 2023)
       </p>
     </section>
 
     <section>
       <h2>Skills</h2>
       <ul>
-        <li>Business Chinese communication (reading, writing, basic interpretation)</li>
-        <li>Basic programming with Python</li>
-        <li>Data processing and analysis with Pandas</li>
-        <li>HTML & CSS fundamentals</li>
-        <li>Microsoft Office (Word, Excel, PowerPoint)</li>
-        <li>Teamwork, presentation, and academic research skills</li>
+        <li>Business Chinese communication (listening, speaking, reading, writing)</li>
+        <li>Chinese–Vietnamese translation and interpretation (basic level)</li>
+        <li>Academic research and document preparation</li>
+        <li>Teaching material development</li>
+        <li>Teamwork and independent working skills</li>
+        <li>Basic IT and office software skills</li>
       </ul>
     </section>
 
     <section>
       <h2>Experience</h2>
       <p>
-        • Completed multiple academic projects involving data handling and reporting<br>
-        • Experienced in group collaboration and oral presentations<br>
-        • Familiar with GitHub for version control and documentation<br>
-        • Able to work responsibly under deadlines and adapt quickly to new tools
+        <strong>Chinese Translator & Interpreter</strong><br>
+        VCI Consulting & Investment Joint Stock Company (2024 – 2025)
+      </p>
+      <p>
+        Translated documents related to construction, equipment, and technical materials for
+        Chinese partner companies. Communicated and coordinated with Chinese partners during
+        business exchanges.
+      </p>
+
+      <p>
+        <strong>Education Department Staff</strong><br>
+        Master Edu Chinese Language Center (2023 – 2024)
+      </p>
+      <p>
+        Developed Chinese teaching materials, assisted in teaching Vietnamese learners,
+        and served as the head of the Chinese Language Club organized by the center.
       </p>
     </section>
 
     <section>
-      <h2>Career Objective</h2>
+      <h2>Certifications</h2>
+      <ul>
+        <li>HSK Level 6 – 255 points</li>
+        <li>HSKK Advanced – 75 points</li>
+        <li>VSTEP English Certificate – B2</li>
+        <li>Basic Information Technology Application Certificate</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Achievements</h2>
+      <ul>
+        <li>Encouragement Prize – National Excellent Student Competition (Chinese), 2022–2023</li>
+        <li>Third Prize – Provincial Excellent Student Competition (Chinese), 2022–2023</li>
+        <li>Silver Medal – Hung Vuong Summer Camp (Chinese), 2022–2023</li>
+        <li>Bronze Medal – Regional Excellent Student Competition (Chinese), 2021–2022</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Contact</h2>
       <p>
-        I aim to gain practical experience through internships or entry-level positions, continuously
-        improve my professional skills, and gradually develop into a competent specialist in business,
-        language, and technology-related fields.
+        Phone: 0856 499 914<br>
+        Email: huongttt.works@gmail.com
       </p>
     </section>
 
