--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     <section>
       <h2>Certifications</h2>
       <ul>
-        <li>HSK Level 6 – 255 points</li>
-        <li>HSKK Advanced – 75 points</li>
+        <li>HSK Level 6</li>
+        <li>HSKK Advanced</li>
         <li>VSTEP English Certificate – B2</li>
         <li>Basic Information Technology Application Certificate</li>
       </ul>
